# assistant-api

./: .pre-comit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
app/: config.py  main.py
app/agent/: __init__.py  client.py  setup.py  tools.py  util.py
app/health/: api.py  model.py
app/tests/thread/: test_api.py
app/thread/: api.py  model.py  service.py
deployment/argocd/: application-dev.yaml  application-prod.yaml
deployment/helm-chart/: Chart.yaml  values-dev.yaml  values-prod.yaml
deployment/helm-chart/charts/: eks-app-0.30.0.tgz
tests/thread/: test_api.py
